force-app/main/default/objects/Payment_Status__c/Payment_Status__c.object-meta.xml
<CustomObject>
    <label>Payment Status</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Payment Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment_Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>