force-app/main/default/objects/Payment_Status__c/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <label>Event Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>