force-app/main/default/objects/Payment_Status__c/fields/PSP_Reference__c.field-meta.xml
<CustomField>
    <fullName>PSP_Reference__c</fullName>
    <label>PSP Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>